--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /BehindTimeGirl/Library
 /BehindTimeGirl/Logs
+/BehindTimeGirl/UserSettings
